--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,6 +27,9 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@features/*": [
+        "./src/features/*"
       ]
     }
   },
