--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-scan": "^0.3.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.17",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
