--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-router": "^1.114.29",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.485.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -35,6 +36,7 @@
     "@stylistic/eslint-plugin": "^4.2.0",
     "@tanstack/react-router-devtools": "^1.114.29",
     "@tanstack/router-plugin": "^1.114.30",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.14",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
