--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.485.0",
     "nanoid": "^5.1.5",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scan": "^0.3.3",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.17",
     "tw-animate-css": "^1.2.5",
